# FullSubNet-plus

./: MANIFEST.in  README.md  setup.cfg
speech_enhance/audio_zen/: utils.py
speech_enhance/audio_zen/acoustics/: mask.py
speech_enhance/audio_zen/inferencer/: base_inferencer.py
speech_enhance/audio_zen/model/module/: sequence_model.py
speech_enhance/audio_zen/trainer/: base_trainer.py
speech_enhance/config/: inference.toml
speech_enhance/fullsubnet/dataset/: dataset_inference.py  dataset_validation.py
speech_enhance/fullsubnet/inferencer/: inferencer.py
speech_enhance/fullsubnet/model/: fullsubnet.py
speech_enhance/fullsubnet/trainer/: trainer.py
speech_enhance/fullsubnet_plus/dataset/: dataset_inference.py  dataset_train.py
speech_enhance/fullsubnet_plus/inferencer/: inferencer.py
speech_enhance/fullsubnet_plus/model/: fullsubnet_plus.py
speech_enhance/fullsubnet_plus/trainer/: trainer.py
speech_enhance/tools/: calculate_metrics.py  collect_lst.py  inference.py  train.py
