[metadata]
name = speech_enhance
version_config = True
author = Chen, Jun and Wang, Zilin and Tuo, Deyi and Wu, Zhiyong and Kang, Shiyin and Meng, Helen
url = https://github.com/RookieJunChen/FullSubNet-plus
description = The official PyTorch implementation of FullSubNet+: Channel Attention FullSubNet with Complex Spectrograms for Speech Enhancement.
long_description = file: README.md
long_description_content_type = text/markdown
licence = Apache 2.0

[options]
packages = find:
install_requires = 
    click
    Cython
    colorful
    joblib
    librosa
    matplotlib
    mir_eval
    pesq
    pypesq @https://github.com/vBaiCai/python-pesq/archive/master.zip
    pystoi
    tensorboard
    toml
    torch
    torch_complex
    torchaudio
    torchvision
    tqdm
setup_requires =
    setuptools-git-versioning
include_package_data = True

[options.extras_require]
dev = 
    pytest
    black

[options.entry_points]
console_scripts =
    speech_enhance_inference = speech_enhance.tools.inference:main

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
